--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    box-sizing: border-box;
+}
+body {
+    margin: 0;
+    font-family:system-ui, 'Segoe UI';    
+    color: #2b2b2b;
+}
+
+.title-principal{
+    color: rgb(140, 69, 255);
+}
+
+.text-principal{
+    color: #2b2b2b;
+    font-size: 22px;
+    font-weight: bold;
+}
