--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,13 +1,13 @@
-main {
+.app-container{
+    display: grid;
     height: 100vh;
     width: 100vw;
-    background-image: linear-gradient(to bottom, white 10%, transparent );
+    grid-template-rows: 60px 1fr;
+    align-items: center;
     background-image: 
-        linear-gradient(to right, white 30%, transparent),
+        linear-gradient(45deg, white 30%, transparent),
         url("../../public/bg1.png");
     background-size: cover;
     background-position: 300px;
     background-repeat: no-repeat;
-    padding: 100px 30px;
-    overflow: hidden;
 }
