--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,5 @@
 <!-- <router-outlet></router-outlet> -->
-<app-menu></app-menu>
-
-<main>
-    <div class="pill">
-      Welcome to The Algorists: A Comprehensive Tech Interview Prep Platform  👌
-    </div>
-    <h1 class="title-principal">Michael Esteban Quiros Marin</h1>
-    <p class="text-principal">Software engineer, 4<span class="elevado">+</span> años de experiencia en Angular, React</p>
-    <button class="btn-primary">
-      resume
-    </button>
-    <section class="social">
-      <div class="btn-social linkedin">
-        <span>logo</span>
-        linkedin 
-      </div>
-      <div class="btn-social github"></div>
-      <div class="btn-social blog"></div>
-    </section>
-</main>
+<div class="app-container">
+  <app-menu></app-menu>
+  <app-profile></app-profile>
+</div>
