--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -3,16 +3,17 @@ nav {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        position: absolute;
         width: 100%;
         min-height: 60px ;
-        top: 0;
+        /* position: absolute; */
+        /* top: 0; */
         .logo{
             font-size: large;
             font-weight: 600;
             border: solid;
             padding: 5px 10px;
             cursor: pointer;
+            margin: 0px 30px;
         }
         .menu-items{
             display: flex;
